# vulcan-jwst-tool

./: .gitignore  CLAUDE.md  README.md  notes.md  pyproject.toml
.github/workflows/: full-stack-smoke.yml  tests.yml
data/: notes.md
data/jwst_tool/model_cache/: 7a95f66a3e953949.npz
data/jwst_tool/noise_cache/: e65cd69c0ad99608.job.json
deploy/: Caddyfile  DEPLOY.md  Dockerfile  aws_provision.sh  constraints-app.txt  docker-compose.yml  dockerignore  env.example  make_app_lock.py  make_data_bundles.sh  requirements-app-lock.txt  requirements-pandeia.txt  server_setup.sh
deploy/hf-space/: Dockerfile  README.md  SETUP.md  bootstrap_data.py  entrypoint.sh  finish_hf_setup.py  upload_data.sh
docs/: audit_decisions_2026-07-21.md  picaso_roadmap.md  upstream_report_picaso.md
examples/: api_walkthrough.ipynb
jwst_tool/: README.md  app.py  detect.py  fisher.py  forward.py  instruments.py  noise.py  pandeia_worker.py
retrieval_framework/: README.md  config_schema.py  pipeline.py  run_smc.py  smoke_retrieval.py
retrieval_framework/tests/: test_init_state.py  test_warm_extrap.py  test_warm_reject.py
runs/w39b_smc_retrieval/: README.md  case.py  run_nas_w39b.pbs
src/jwst_tool/: __init__.py  adjoint_diag.py  app.py  binning.py  cli.py  datacheck.py  detect.py  fetch.py  fisher.py  forward.py  instruments.py  noise.py  pandeia_worker.py  picaso_chem.py  picaso_climate.py  picaso_env.py  planets.py  runlimit.py  stellar.py
tests/: conftest.py  test_binning.py  test_closure.py  test_detect.py  test_fisher.py  test_floor_and_invariance.py  test_forward_params.py  test_pandeia_worker.py  test_scenarios.py
tests/live/: RESULTS_v18_1.md  test_picaso_live.py
tests/parity/: README.md
tests/parity/outputs/: .gitignore  REPORT.md  parity_summary.json
tests/parity/scripts/: make_parity_plots.py  make_report.py  run_parity.py
tests/parity_picaso/outputs/: REPORT.md  parity_native_rt.npz
tests/parity_picaso/scripts/: run_native_rt_parity.py
tests/unit/: test_adjoint_diag.py  test_app_smoke.py  test_binning.py  test_closure.py  test_datacheck.py  test_detect.py  test_fetch.py  test_fisher.py  test_floor_and_invariance.py  test_forward_params.py  test_forward_params_v16.py  test_pandeia_worker.py  test_picaso_blend.py  test_picaso_climate_key.py  test_picaso_params.py  test_rt_profile_golden.py  test_runlimit.py  test_scenarios.py  test_transits_window.py
tools/: generate_miegrid.py
validation/pandexo_parity/: README.md  REPORT.md  make_parity_plots.py  make_report.py  pandexo_worker.py  run_parity.py
vulcan-jwst-tool/src/jwst_tool/: __init__.py  app.py  cli.py  forward.py  instruments.py
vulcan-retrieval/examples/: fig_exojax_sensitivity.py  run_demo.py  run_figs.py
vulcan-retrieval/runs/w39b_smc_retrieval/: case.py
vulcan-retrieval/scripts/zco_information/: build_zco_jacobians.py  (+2 more)
vulcan-retrieval/tests/: test_binning.py
vulcan-retrieval/validation/: broadening_ab.py  elemental_audit.py  mala_reversibility.py  resolution_ladder.py  smoke_test.py  smoke_zco.py  top_pressure_ladder.py  validate_wide_chem.py
(+4 files in other folders)
