# vulcan-jwst-tool: JWST instrument selector on the vulcan-retrieval forward
# model. The Pandeia ETC noise backend runs in its OWN conda env, addressed via
# JWST_TOOL_PANDEIA_PYTHON -- it is deliberately NOT a dependency here. The
# DEFAULT backend is pandeia.engine 2026.2 (the current STScI JWST release; set
# JWST_TOOL_BACKEND=current, the default); a pinned 3.0 + 3.0rc3 pair is retained
# only as the "legacy" reproducibility backend (see instruments._BACKENDS).
# Inputs live at the repo-root data/ (override with JWST_TOOL_DATA_DIR); generated
# caches at output/ (JWST_TOOL_OUTPUT_DIR).
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulcan-jwst-tool"
dynamic = ["version"]
description = "JWST instrument selector: VULCAN-JAX chemistry -> ExoJAX transmission spectra -> Pandeia ETC noise; conditional template S/N + Fisher forecasts (Streamlit GUI + programmatic API)"
readme = "README.md"
# 3.10 floor matches the sibling packages (vulcan-jax, vulcan-retrieval): the code
# is 3.10-clean and the deliberately-separate Pandeia env carries no constraint here.
requires-python = ">=3.10"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "Isaac Malsky" }]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.26",
    "matplotlib",
    "jax>=0.6.2",
    "vulcan-retrieval>=0.11.0",  # 0.11.0 adds the emission tau_bottom diagnostic
                                 # (+ art_pbtm_bar) and the Mie condensate deck
                                 # with a mie_condensate echo that forward v16
                                 # emission + Mie modes require and echo-verify;
                                 # 0.10.1 added the profile-overridable RT knobs
                                 # (art_ptop_bar / rt_integration /
                                 # dit_grid_resolution) echo-verified by v15
    "vulcan-jax>=0.3.0",  # direct imports: load_config (CO_BASELINE check) + steady_state_grad (adjoint_diag)
]

[project.urls]
Homepage = "https://github.com/imalsky/vulcan-jwst-tool"
Repository = "https://github.com/imalsky/vulcan-jwst-tool"

[project.optional-dependencies]
# streamlit floor: app.py uses the width="stretch" API on st.button/st.pyplot/
# st.dataframe, introduced for those widgets by 1.49.0 (2025-08-26).
gui = ["streamlit>=1.49", "pandas"]
dev = ["ruff>=0.11", "build>=1.2", "twine>=5"]

[project.scripts]
jwst-tool = "jwst_tool.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "jwst_tool._version.__version__" }

[tool.ruff]
line-length = 100
